// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Gallery
  columns={3}
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <Photo
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": 370.4,
          }
        }
      >
        <img
          alt="DSC02427"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02427"
          width={370.4}
        />
      </Photo>
      <Photo
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": 370.4,
          }
        }
      >
        <img
          alt="bleik sólsetur"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="bleik sólsetur"
          width={370.4}
        />
      </Photo>
      <Photo
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": 385.2,
          }
        }
      >
        <img
          alt="DSC02393"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02393"
          width={385.2}
        />
      </Photo>
      <Photo
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01594"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01594"
          width={276}
        />
      </Photo>
      <Photo
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": 574,
          }
        }
      >
        <img
          alt="DSC01590"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01590"
          width={574}
        />
      </Photo>
      <Photo
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01570"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01570"
          width={276}
        />
      </Photo>
      <Photo
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": 255.4,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": 378,
          }
        }
      >
        <img
          alt="DSC01566"
          height={255.4}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01566"
          width={378}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;

exports[`renders correctly after click 1`] = `
<Gallery
  columns={3}
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <Photo
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": -2.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": -4.3,
          }
        }
      >
        <img
          alt="DSC02427"
          height={-2.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02427"
          width={-4.3}
        />
      </Photo>
      <Photo
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": -2.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": -4.3,
          }
        }
      >
        <img
          alt="bleik sólsetur"
          height={-2.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="bleik sólsetur"
          width={-4.3}
        />
      </Photo>
      <Photo
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": -2.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": -4.4,
          }
        }
      >
        <img
          alt="DSC02393"
          height={-2.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02393"
          width={-4.4}
        />
      </Photo>
      <Photo
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": -2.1,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": -3.2,
          }
        }
      >
        <img
          alt="DSC01594"
          height={-2.1}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01594"
          width={-3.2}
        />
      </Photo>
      <Photo
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": -2.1,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": -6.6,
          }
        }
      >
        <img
          alt="DSC01590"
          height={-2.1}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01590"
          width={-6.6}
        />
      </Photo>
      <Photo
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": -2.1,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": -3.2,
          }
        }
      >
        <img
          alt="DSC01570"
          height={-2.1}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01570"
          width={-3.2}
        />
      </Photo>
      <Photo
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": -1.1,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": -1.7,
          }
        }
      >
        <img
          alt="DSC01566"
          height={-1.1}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01566"
          width={-1.7}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;
